[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.0.0-beta.9"
actix-http = "3.0.0-beta.10"
reqwest = "0.11.16"
tokio = "1.28.0"

[dev-dependencies]
actix-rt = "2.8.0"
